--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,13 +25,17 @@ build:
     # PR 合并到 main 后执行、推送到 main 分支时
     - if: $CI_COMMIT_BRANCH == "main"
 
-publish-gitee:
+publish-gitee-pages:
   stage: publish
   needs:
     - job: build
       artifacts: true
   image: bitnami/git:2.40.1
   script:
+    - git config --global user.email $GITLAB_USER_EMAIL
+    - git config --global user.name $GITLAB_USER_NAME
+    - git config --global user.email
+    - git config --global user.name
     - git add -f build/
     - git commit -m "发布 Gitee Pages"
     - git remote add gitee https://xuxiaowei-com-cn:$GITEE_PRIVATE_TOKEN@gitee.com/$CI_PROJECT_PATH.git
