--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ publish-gitee-pages:
     - git commit -m "发布 Gitee Pages"
     - git remote add gitee https://xuxiaowei-com-cn:$GITEE_PRIVATE_TOKEN@gitee.com/$CI_PROJECT_PATH.git
     - git pull --progress -v --no-rebase gitee pages || echo 远端不存在pages分支
-    - git push -u gitee $CI_COMMIT_BRANCH:pages
+    - git push -f -u gitee $CI_COMMIT_BRANCH:pages
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
 
