--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+
+      - name: Cache modules
+        uses: actions/cache@v3
+        id: cache-modules
+        with:
+          path: |
+            ~/.npm
+            ~/.cache
+          key: ubuntu-latest-${{ hashFiles('package.json') }}
+          restore-keys: |
+            ubuntu-latest-
 
       - run: npm i
 
