--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,7 +22,8 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
@@ -40,6 +41,8 @@ jobs:
           restore-keys: |
             ${{ matrix.os }}-
 
-      - run: npm i
+      - name: Install Dependencies
+        run: npm install
 
-      - run: npm run build
+      - name: Build with Docusaurus
+        run: npm run build
