--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,23 @@ build:
     # PR 合并到 main 后执行、推送到 main 分支时
     - if: $CI_COMMIT_BRANCH == "main"
 
+pages:
+  stage: build
+  image: node:16.19.1
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - node_modules/
+  script:
+    - npm run pre
+    - npm run build
+    - mv build/ public/
+  artifacts:
+    paths:
+      - public/
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+
 publish-gitee-pages:
   stage: publish
   needs:
