:construction_worker: sync jihulab

--- a/sync.yml
+++ b/sync.yml
@@ -159,11 +159,11 @@ sync-jihulab:
     - git push -u jihulab $CI_COMMIT_BRANCH
   rules:
     # 匹配以 dependabot 开头的分支
-    - if: $CI_SERVER_HOST =~ xuxiaowei && $CI_COMMIT_BRANCH =~ /^dependabot*/
+    - if: $CI_SERVER_HOST =~ 'xuxiaowei' && $CI_COMMIT_BRANCH =~ /^dependabot*/
       # 不执行
       when: never
     # 非 PR 时触发
-    - if: $CI_SERVER_HOST =~ xuxiaowei && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == null
+    - if: $CI_SERVER_HOST =~ 'xuxiaowei' && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == null
   retry: 2
   # 允许失败
   allow_failure: true
