开启 blog，增加注释，补充 pre scripts，补充 .gitlab-ci.yml 打包（测试）

--- a/.gitignore
+++ b/.gitignore
@@ -53,5 +53,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/package-lock.json
 /public/
+
+/yarn.lock
+/pnpm-lock.yaml
+/package-lock.json
