--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,49 @@ pages:
     paths:
       - node_modules/
   script:
-    - npm run pre
+    - yarn config set registry https://registry.npmmirror.com
+    - yarn
+    - yarn build
+    - mv build/ public/
+  artifacts:
+    expire_in: 1 week
+    paths:
+      - public/
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+
+build:npm:
+  stage: build
+  image: node:16.19.1
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - node_modules/
+  script:
+    - npm config set registry https://registry.npmmirror.com
+    - npm install
     - npm run build
+    - mv build/ public/
+  artifacts:
+    expire_in: 1 week
+    paths:
+      - public/
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
+
+build:pnpm:
+  stage: build
+  image: node:16.19.1
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - node_modules/
+  script:
+    - yarn config set registry https://registry.npmmirror.com
+    - yarn global add pnpm
+    - pnpm config set registry https://registry.npmmirror.com
+    - pnpm install
+    - pnpm run build
     - mv build/ public/
   artifacts:
     expire_in: 1 week
