--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ build:pnpm:
     - yarn global add pnpm
     - pnpm config set registry https://registry.npmmirror.com
     - pnpm install
-    - pnpm run build
+    - npm run build
     - mv build/ public/
   artifacts:
     expire_in: 1 week
