Revert ":construction_worker: pnpm: npm run build"
This reverts commit 75c966ad17f6a2b310fb4c1c7733f8781fe0966b.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ build:pnpm:
     - yarn global add pnpm
     - pnpm config set registry https://registry.npmmirror.com
     - pnpm install
-    - npm run build
+    - pnpm run build
     - mv build/ public/
   artifacts:
     expire_in: 1 week
