--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ pages:
   script:
     - yarn config set registry https://registry.npmmirror.com
     - yarn
-    - yarn build
+    - npm run build
     - mv build/ public/
   artifacts:
     expire_in: 1 week
