Revert ":construction_worker: yarn: npm run build"
This reverts commit 1dd80be5989daa809ef791a5648b5f52fbdf1211.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ pages:
   script:
     - yarn config set registry https://registry.npmmirror.com
     - yarn
-    - npm run build
+    - yarn build
     - mv build/ public/
   artifacts:
     expire_in: 1 week
