--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,10 @@
 stages:
   - build
-  - publish
   # 代码同步
   - sync
 
-pages:
-  stage: build
-  image: node:16.19.1
-  cache:
-    key: "${CI_JOB_NAME}"
-    paths:
-      - node_modules/
-  script:
-    - yarn config set registry https://registry.npmmirror.com
-    - echo $CI_PIPELINE_SOURCE
-    - if [ $CI_PIPELINE_SOURCE == web ]; then
-      yarn;
-      fi
-    - yarn build
-    - mv build/ public/
-  artifacts:
-    expire_in: 1 week
-    paths:
-      - public/
-  rules:
-    - if: $CI_COMMIT_BRANCH == "main"
-
 build:npm:
   stage: build
-  image: node:16.19.1
   cache:
     key: "${CI_JOB_NAME}"
     paths:
@@ -45,52 +21,10 @@ build:npm:
     expire_in: 1 week
     paths:
       - public/
+  tags:
+    - windows
   rules:
-    - if: $CI_COMMIT_BRANCH == "main"
-
-build:pnpm:
-  stage: build
-  image: node:16.19.1
-  cache:
-    key: "${CI_JOB_NAME}"
-    paths:
-      - node_modules/
-  script:
-    - yarn config set registry https://registry.npmmirror.com
-    - yarn global add pnpm
-    - pnpm config set registry https://registry.npmmirror.com
-    - echo $CI_PIPELINE_SOURCE
-    - if [ $CI_PIPELINE_SOURCE == web ]; then
-      pnpm install;
-      fi
-    - pnpm run build
-    - mv build/ public/
-  artifacts:
-    expire_in: 1 week
-    paths:
-      - public/
-  rules:
-    - if: $CI_COMMIT_BRANCH == "main"
-
-publish-gitee-pages:
-  stage: publish
-  needs:
-    - job: pages
-      artifacts: true
-  image: bitnami/git:2.40.1
-  script:
-    - git config --global user.email $GITLAB_USER_EMAIL
-    - git config --global user.name $GITLAB_USER_NAME
-    - git config --global user.email
-    - git config --global user.name
-    - echo 当前分支：$CI_COMMIT_BRANCH
-    - git checkout -b $CI_COMMIT_BRANCH
-    - git add -f public/
-    - git commit -m "发布 Gitee Pages"
-    - git remote add gitee https://xuxiaowei-com-cn:$GITEE_PRIVATE_TOKEN@gitee.com/$CI_PROJECT_PATH.git
-    - git push -f -u gitee $CI_COMMIT_BRANCH:pages
-  rules:
-    - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_BRANCH == "build/windows"
 
 # 嵌入
 include:
