Revert ":construction_worker: $CI_JOB_MANUAL"
This reverts commit 62f62da73eb896406e49fc1c0c1fe8531e7f28c7.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,7 @@ pages:
       - node_modules/
   script:
     - yarn config set registry https://registry.npmmirror.com
-    - echo $CI_JOB_MANUAL
-    - if [ "$CI_JOB_MANUAL" ]; then
-      yarn;
-      fi
+    - yarn
     - yarn build
     - mv build/ public/
   artifacts:
@@ -35,10 +32,7 @@ build:npm:
       - node_modules/
   script:
     - npm config set registry https://registry.npmmirror.com
-    - echo $CI_JOB_MANUAL
-    - if [ "$CI_JOB_MANUAL" ]; then
-      npm install;
-      fi
+    - npm install
     - npm run build
     - mv build/ public/
   artifacts:
@@ -59,10 +53,7 @@ build:pnpm:
     - yarn config set registry https://registry.npmmirror.com
     - yarn global add pnpm
     - pnpm config set registry https://registry.npmmirror.com
-    - echo $CI_JOB_MANUAL
-    - if [ "$CI_JOB_MANUAL" ]; then
-      pnpm install;
-      fi
+    - pnpm install
     - pnpm run build
     - mv build/ public/
   artifacts:
