--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "3.0.1",
+    "@docusaurus/plugin-google-tag-manager": "3.0.1",
     "@docusaurus/preset-classic": "3.0.1",
     "@mdx-js/react": "3.0.0",
     "clsx": "2.0.0",
