:wrench: :construction_worker: GitHub Pages 专用脚本 每个网站使用自己的代码管理平台的编辑页面链接

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build with Docusaurus
-        run: npm run build
+        run: npm run build:github
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
