--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
+    "start:github": "docusaurus start --config=docusaurus.config.github.ts",
+    "build:github": "docusaurus build --config=docusaurus.config.github.ts",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
