:construction_worker: framagit.org 不同步到自己

--- a/sync.yml
+++ b/sync.yml
@@ -194,6 +194,10 @@ sync-framagit:
       git push -u framagit $CI_COMMIT_TAG;
       fi
   rules:
+    # framagit.org 不同步到自己
+    - if: $CI_SERVER_HOST == 'framagit.org'
+      # 不执行
+      when: never
     # 匹配以 dependabot 开头的分支
     - if: $CI_SERVER_HOST == 'gitlab.helm.xuxiaowei.cn' && $CI_COMMIT_BRANCH =~ /^dependabot*/
       # 不执行
