:construction_worker: git status

--- a/sync.yml
+++ b/sync.yml
@@ -15,6 +15,7 @@ sync-gitee:
     - git remote add gitee https://xuxiaowei-com-cn:$GITEE_PRIVATE_TOKEN@gitee.com/$CI_PROJECT_PATH.git
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
+    - git status
     - if [ "$CI_COMMIT_BRANCH" ]; then
       git checkout -b $CI_COMMIT_BRANCH;
       git pull --progress -v --no-rebase gitee $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
@@ -47,6 +48,7 @@ sync-gitcode:
     - git remote add gitcode https://qq_32596527:$GITCODE_PRIVATE_TOKEN@gitcode.net/$CI_PROJECT_PATH.git
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
+    - git status
     - if [ "$CI_COMMIT_BRANCH" ]; then
       git checkout -b $CI_COMMIT_BRANCH;
       git pull --progress -v --no-rebase gitcode $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
@@ -88,6 +90,7 @@ sync-gitlink:
     - git remote add gitlink git@code.gitlink.org.cn:$CI_PROJECT_PATH.git
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
+    - git status
     - ssh-keyscan -H code.gitlink.org.cn >> ~/.ssh/known_hosts
     - if [ "$CI_COMMIT_BRANCH" ]; then
       git checkout -b $CI_COMMIT_BRANCH;
@@ -121,6 +124,7 @@ sync-gitlab:
     - git remote add gitlab https://xuxiaowei-com-cn:$GITLAB_PRIVATE_TOKEN@gitlab.com/$CI_PROJECT_PATH.git
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
+    - git status
     - if [ "$CI_COMMIT_BRANCH" ]; then
       git checkout -b $CI_COMMIT_BRANCH;
       git pull --progress -v --no-rebase gitlab $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
@@ -153,6 +157,7 @@ sync-github:
     - git remote add github https://xuxiaowei-com-cn:$GITHUB_PRIVATE_TOKEN@github.com/$CI_PROJECT_PATH.git
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
+    - git status
     - if [ "$CI_COMMIT_BRANCH" ]; then
       git checkout -b $CI_COMMIT_BRANCH;
       git pull --progress -v --no-rebase github $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
@@ -185,6 +190,7 @@ sync-framagit:
     - git remote add framagit https://xuxiaowei:$FRAMAGIT_PRIVATE_TOKEN@framagit.org/$CI_PROJECT_PATH.git
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
+    - git status
     - if [ "$CI_COMMIT_BRANCH" ]; then
       git checkout -b $CI_COMMIT_BRANCH;
       git pull --progress -v --no-rebase framagit $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
