--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,7 @@ publish-gitee-pages:
     - git config --global user.email
     - git config --global user.name
     - echo 当前分支：$CI_COMMIT_BRANCH
+    - git status
     - git checkout -b $CI_COMMIT_BRANCH
     - git add -f public/
     - git commit -m "发布 Gitee Pages"
