--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,9 @@ pages:
     paths:
       - node_modules/
   script:
-    - yarn config set registry https://registry.npmmirror.com
+    - if [ $CI_SERVER_HOST == 'gitlab.helm.xuxiaowei.cn' ]; then
+      yarn config set registry https://registry.npmmirror.com
+      fi
     - yarn
     - yarn build
     - mv build/ public/
@@ -31,7 +33,9 @@ build:npm:
     paths:
       - node_modules/
   script:
-    - npm config set registry https://registry.npmmirror.com
+    - if [ $CI_SERVER_HOST == 'gitlab.helm.xuxiaowei.cn' ]; then
+      npm config set registry https://registry.npmmirror.com
+      fi
     - npm install
     - npm run build
     - mv build/ public/
@@ -50,9 +54,13 @@ build:pnpm:
     paths:
       - node_modules/
   script:
-    - yarn config set registry https://registry.npmmirror.com
+    - if [ $CI_SERVER_HOST == 'gitlab.helm.xuxiaowei.cn' ]; then
+      yarn config set registry https://registry.npmmirror.com
+      fi
     - yarn global add pnpm
-    - pnpm config set registry https://registry.npmmirror.com
+    - if [ $CI_SERVER_HOST == 'gitlab.helm.xuxiaowei.cn' ]; then
+      pnpm config set registry https://registry.npmmirror.com
+      fi
     - pnpm install
     - pnpm run build
     - mv build/ public/
