--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
-registry=http://registry.npmmirror.com/
-# registry=https://registry.npmjs.org/
+###registry=http://registry.npmmirror.com/
+###registry=https://registry.npmjs.org/
+
 save-exact=true
