Revert ":construction_worker: fix ;"
This reverts commit 0ef2be4c85c27ed56525801a28e6a9575a8aa748.

--- a/sync.yml
+++ b/sync.yml
@@ -17,7 +17,7 @@ sync-gitee:
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
     - if [ "$CI_COMMIT_BRANCH" ]; then
-      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;
+      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;;
       git pull --progress -v --no-rebase gitee $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
       git push -u gitee $CI_COMMIT_BRANCH;
       fi
@@ -50,7 +50,7 @@ sync-gitcode:
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
     - if [ "$CI_COMMIT_BRANCH" ]; then
-      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;
+      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;;
       git pull --progress -v --no-rebase gitcode $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
       git push -u gitcode $CI_COMMIT_BRANCH;
       fi
@@ -93,7 +93,7 @@ sync-gitlink:
     - echo 当前标签：$CI_COMMIT_TAG
     - ssh-keyscan -H code.gitlink.org.cn >> ~/.ssh/known_hosts
     - if [ "$CI_COMMIT_BRANCH" ]; then
-      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;
+      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;;
       git pull --progress -v --no-rebase gitlink $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
       git push -u gitlink $CI_COMMIT_BRANCH;
       fi
@@ -126,7 +126,7 @@ sync-gitlab:
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
     - if [ "$CI_COMMIT_BRANCH" ]; then
-      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;
+      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;;
       git pull --progress -v --no-rebase gitlab $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
       git push -u gitlab $CI_COMMIT_BRANCH;
       fi
@@ -159,7 +159,7 @@ sync-github:
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
     - if [ "$CI_COMMIT_BRANCH" ]; then
-      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;
+      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;;
       git pull --progress -v --no-rebase github $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
       git push -u github $CI_COMMIT_BRANCH;
       fi
@@ -192,7 +192,7 @@ sync-framagit:
     - echo 当前分支：$CI_COMMIT_BRANCH
     - echo 当前标签：$CI_COMMIT_TAG
     - if [ "$CI_COMMIT_BRANCH" ]; then
-      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;
+      git checkout $CI_COMMIT_BRANCH || git checkout -b $CI_COMMIT_BRANCH;;
       git pull --progress -v --no-rebase framagit $CI_COMMIT_BRANCH || echo 远端不存在$CI_COMMIT_BRANCH分支;
       git push -u framagit $CI_COMMIT_BRANCH;
       fi
