--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,17 +1,5 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
-
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+xuxiaowei:
+  name: 徐晓伟
+  title: 网站作者
+  url: https://gitee.com/xuxiaowei-com-cn
+  image_url: https://foruda.gitee.com/avatar/1699408599165429866/1755497_xuxiaowei-com-cn_1699408599.png
