--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,14 @@
 stages:
-  - build
-  - publish
-  # 代码同步
+  - pages
+  - docker:build
+  - docker:deploy
   - sync
 
+variables:
+  DOCKER_TAG: 0.0.1
+
 pages:
-  stage: build
+  stage: pages
   image: node:18.17.1
   cache:
     key: "${CI_JOB_NAME}"
@@ -13,6 +16,9 @@ pages:
       - node_modules/
   script:
     - if [ $CI_SERVER_HOST == 'gitlab.helm.xuxiaowei.cn' ]; then
+      yarn config set registry https://registry.npmmirror.com;
+      fi
+    - if [ $CI_SERVER_HOST == 'jihulab.com' ]; then
       yarn config set registry https://registry.npmmirror.com;
       fi
     - yarn
@@ -23,10 +29,10 @@ pages:
     paths:
       - public/
   rules:
-    - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_BRANCH == "main" && $ENABLE_DOCS == "true"
 
 build:npm:
-  stage: build
+  stage: pages
   image: node:18.17.1
   cache:
     key: "${CI_JOB_NAME}"
@@ -34,6 +40,9 @@ build:npm:
       - node_modules/
   script:
     - if [ $CI_SERVER_HOST == 'gitlab.helm.xuxiaowei.cn' ]; then
+      npm config set registry https://registry.npmmirror.com;
+      fi
+    - if [ $CI_SERVER_HOST == 'jihulab.com' ]; then
       npm config set registry https://registry.npmmirror.com;
       fi
     - npm install
@@ -47,7 +56,7 @@ build:npm:
     - if: $CI_COMMIT_BRANCH == "main"
 
 build:pnpm:
-  stage: build
+  stage: pages
   image: node:18.17.1
   cache:
     key: "${CI_JOB_NAME}"
@@ -55,6 +64,9 @@ build:pnpm:
       - node_modules/
   script:
     - if [ $CI_SERVER_HOST == 'gitlab.helm.xuxiaowei.cn' ]; then
+      yarn config set registry https://registry.npmmirror.com;
+      fi
+    - if [ $CI_SERVER_HOST == 'jihulab.com' ]; then
       yarn config set registry https://registry.npmmirror.com;
       fi
     - yarn global add pnpm
@@ -71,25 +83,45 @@ build:pnpm:
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
 
-publish-gitee-pages:
-  stage: publish
+docker:build:
+  stage: docker:build
+  image:
+    name: xuxiaoweicomcn/kaniko-project-executor:v1.22.0-debug
+    entrypoint: [""]
   needs:
     - job: pages
       artifacts: true
-  image: bitnami/git:2.40.1
+  before_script:
+    - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"},\"https://index.docker.io/v1/\":{\"auth\":\"$(printf "%s:%s" ${DOCKER_USERNAME} "${DOCKER_PASSWORD}" | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
   script:
-    - git config --global user.email $GITLAB_USER_EMAIL
-    - git config --global user.name $GITLAB_USER_NAME
-    - git config --global user.email
-    - git config --global user.name
-    - echo 当前分支：$CI_COMMIT_BRANCH
-    - git checkout -b $CI_COMMIT_BRANCH
-    - git add -f public/
-    - git commit -m "发布 Gitee Pages"
-    - git remote add gitee https://xuxiaowei-com-cn:$GITEE_PRIVATE_TOKEN@gitee.com/$CI_PROJECT_PATH.git
-    - git push -f -u gitee $CI_COMMIT_BRANCH:pages
+    - echo $DOCKER_TAG
+    - /kaniko/executor version
+    - /kaniko/executor
+      --context "${CI_PROJECT_DIR}"
+      --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
+      --build-arg "CI_PIPELINE_URL=${CI_PIPELINE_URL}"
+      --destination "${CI_REGISTRY_IMAGE}:${DOCKER_TAG}"
+      --destination "${CI_REGISTRY_IMAGE}:${DOCKER_TAG}-${CI_PIPELINE_ID}"
+      --destination "xuxiaoweicomcn/gitlab-k8s:${DOCKER_TAG}"
+      --destination "xuxiaoweicomcn/gitlab-k8s:${DOCKER_TAG}-${CI_PIPELINE_ID}"
   rules:
-    - if: $CI_COMMIT_BRANCH == "main"
+    - if: $CI_COMMIT_BRANCH == "main" && $ENABLE_DOCS_DOCKER == "true"
+
+docker:deploy:
+  stage: docker:deploy
+  needs:
+    - job: docker:build
+  image: docker:26.1.1-cli
+  variables:
+    DOCKER_HOST: $DEPLOY_DOCKER_HOST
+  script:
+    - docker info
+    - docker compose up -d
+  environment: production
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main" && $ENABLE_DOCS_DOCKER_DEPLOY == "true"
+  tags:
+    - lighthouse-docker
 
 # 嵌入
 include:
