:wrench: try_files

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -10,11 +10,13 @@ server {
 
     location / {
         root   /usr/share/nginx/html/gitlab-k8s;
+        try_files $uri $uri/ /index.html;
         index  index.html index.htm;
     }
 
     location /gitlab-k8s {
         root   /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
         index  index.html index.htm;
     }
 
