:wrench: gzip on

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -4,6 +4,8 @@ server {
     server_name  localhost;
 
     server_tokens off;
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
     access_log  /var/log/nginx/gitlab-k8s.access.log  main;
     error_log  /var/log/nginx/gitlab-k8s.error.log  notice;
