--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,50 +1,68 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+# 构建 VitePress 站点并将其部署到 GitHub Pages 的示例工作流程
+#
+name: Deploy VitePress site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
+  # 在针对 `main` 分支的推送上运行。如果你
+  # 使用 `master` 分支作为默认分支，请将其更改为 `master`
   push:
-    branches: [ "main" ]
+    branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # 允许你从 Actions 选项卡手动运行此工作流程
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# 设置 GITHUB_TOKEN 的权限，以允许部署到 GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# 只允许同时进行一次部署，跳过正在运行和最新队列之间的运行队列
+# 但是，不要取消正在进行的运行，因为我们希望允许这些生产部署完成
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: false
 
 jobs:
-  # Build job
+  # 构建工作
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Install Dependencies
-        run: npm install
-      - name: Build with Docusaurus
-        run: npm run build:github
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/checkout@v4
         with:
-          path: build/
+          fetch-depth: 0 # 如果未启用 lastUpdated，则不需要
 
-  # Deployment job
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Install dependencies
+        run: npm install # 或 pnpm install / yarn install / bun install
+
+      - name: editLink
+        run: |
+          cat .vitepress/config.mts
+          sed -i 's#在 Gitee 上编辑此页面#在 GitHub 上编辑#g' .vitepress/config.mts
+          sed -i 's#https://gitee.com/xuxiaowei-com-cn/gitlab-k8s/edit/main/#https://github.com/xuxiaowei-com-cn/gitlab-k8s/edit/main/#g' .vitepress/config.mts
+          cat .vitepress/config.mts
+
+      - name: Build with VitePress
+        run: npm run docs:build # 或 pnpm docs:build / yarn docs:build / bun run docs:build
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: .vitepress/dist
+
+  # 部署工作
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
     needs: build
+    runs-on: ubuntu-latest
+    name: Deploy
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
