:construction_worker: 使用 vitepress 替换 docusaurus

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Build with Docusaurus
-        run: npm run build
+      - name: Build with Vitepress
+        run: npm run docs:build
