:bug: :wrench: 处理 404

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -12,11 +12,21 @@ server {
 
     location / {
         root   /usr/share/nginx/html/gitlab-k8s;
+        # 此处用于兼容页面不存在时，不会显示 Nginx 404，而是显示 vitepress 项目的 404
+        # 此处用于兼容已发布微信公众号的两篇文章的原文链接
+        # https://mp.weixin.qq.com/s/Fy2PXy_nCjknyH0TRnPh-g
+        # https://mp.weixin.qq.com/s/NQ-C-I6Spk9k9J44PI9aog
+        try_files $uri $uri.html /index.html;
         index  index.html index.htm;
     }
 
     location /gitlab-k8s {
         root   /usr/share/nginx/html;
+        # 此处用于兼容页面不存在时，不会显示 Nginx 404，而是显示 vitepress 项目的 404
+        # 此处用于兼容已发布微信公众号的两篇文章的原文链接
+        # https://mp.weixin.qq.com/s/Fy2PXy_nCjknyH0TRnPh-g
+        # https://mp.weixin.qq.com/s/NQ-C-I6Spk9k9J44PI9aog
+        try_files $uri $uri/index.html /index.html;
         index  index.html index.htm;
     }
 
