:bug: :wrench: 处理 404

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -26,7 +26,7 @@ server {
         # 此处用于兼容已发布微信公众号的两篇文章的原文链接
         # https://mp.weixin.qq.com/s/Fy2PXy_nCjknyH0TRnPh-g
         # https://mp.weixin.qq.com/s/NQ-C-I6Spk9k9J44PI9aog
-        try_files $uri $uri.index.html /index.html;
+        try_files $uri $uri.html /index.html;
         index  index.html index.htm;
     }
 
