:construction_worker: 使用环境变量空值推送到 docker hub

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ docker:build:
   stage: docker:build
   image:
     name: registry.cn-qingdao.aliyuncs.com/xuxiaoweicomcn/kaniko-project-executor:v1.23.1-debug
-    entrypoint: [""]
+    entrypoint: [ "" ]
   needs:
     - job: pages
       artifacts: true
@@ -45,14 +45,23 @@ docker:build:
     - echo $DOCKER_TAG
     - /kaniko/executor version
     - /kaniko/executor --help
-    - /kaniko/executor
+    - if [ "$PUSH_DOCKER_HUB" = "true" ]; then
+      /kaniko/executor
       --context "${CI_PROJECT_DIR}"
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
       --build-arg "CI_PIPELINE_URL=${CI_PIPELINE_URL}"
       --destination "${CI_REGISTRY_IMAGE}:${DOCKER_TAG}"
       --destination "${CI_REGISTRY_IMAGE}:${DOCKER_TAG}-${CI_PIPELINE_ID}"
       --destination "xuxiaoweicomcn/gitlab-k8s:${DOCKER_TAG}"
-      --destination "xuxiaoweicomcn/gitlab-k8s:${DOCKER_TAG}-${CI_PIPELINE_ID}"
+      --destination "xuxiaoweicomcn/gitlab-k8s:${DOCKER_TAG}-${CI_PIPELINE_ID}";
+      else
+      /kaniko/executor
+      --context "${CI_PROJECT_DIR}"
+      --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
+      --build-arg "CI_PIPELINE_URL=${CI_PIPELINE_URL}"
+      --destination "${CI_REGISTRY_IMAGE}:${DOCKER_TAG}"
+      --destination "${CI_REGISTRY_IMAGE}:${DOCKER_TAG}-${CI_PIPELINE_ID}";
+      fi
   rules:
     - if: $CI_COMMIT_BRANCH == "main" && $ENABLE_DOCS_DOCKER == "true"
 
